--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "build": "better-npm-run build",
     "lint": "eslint --ext .ts --ext .tsx .",
+    "prebuild": "rimraf .rts2_cache_cjs/ .rts2_cache_es/ .rts2_cache_umd/ dist/",
     "start": "better-npm-run start",
     "test": "tsdx test"
   },
@@ -45,23 +46,23 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "better-npm-run": "^0.1.1",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
-    "husky": "^2.3.0",
+    "husky": "^2.4.1",
     "rimraf": "^2.6.3",
-    "serve": "^11.0.0",
-    "ts-node": "^8.2.0",
+    "serve": "^11.0.2",
+    "ts-node": "^8.3.0",
     "tsconfig-paths": "^3.8.0",
-    "tsdx": "^0.5.11",
-    "tslib": "^1.9.3",
-    "typescript": "^3.4.5"
+    "tsdx": "^0.7.2",
+    "tslib": "^1.10.0",
+    "typescript": "^3.5.2"
   },
   "engines": {
     "node": "10.x",
